--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "get-google-fonts": "^1.2.2",
     "gulp": "^4.0.2",
     "gulp-clean-css": "^4.3.0",
+    "gulp-imagemin": "7.1.0",
     "gulp-sass": "^5.1.0",
     "sass": "^1.49.9"
   }
